Fixed spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -235,7 +235,7 @@ main {
 
 			@include tiny() {
 				text-align: start;
-				margin-right: 31%;
+				margin-right: 40%;
 			}
 
 			.card-link {
